# learn-llm-rag-easily

./: .env  README.md  main.py  pyproject.toml  re.txt  requirements.txt
00_RAG理论/: 02_现有RAG框架总结.md  03_RAG-吴恩达-LangChain.ipynb  03_RAG-吴恩达-LangChain.md  Untitled.ipynb
00_RAG理论/langchain-chroma/: chroma.sqlite3
01_Case1 notebook/C2 调用 LLM 实现基础问答/: 2.2 使用 LLM API.ipynb  2.3 Prompt Engineering.ipynb
01_Case1 notebook/C3 构建词向量 WordEmbedding/: 3.2 使用 Embedding API.ipynb
01_Case1 notebook/C4 准备数据/: 4.1 数据预处理.ipynb
01_Case1 notebook/C5 搭建知识库/: 5.1 搭建向量数据库-Chroma.ipynb  5.1 搭建向量数据库-Milvus.ipynb  5.1 搭建向量数据库-mivus.ipynb  5.1 搭建向量数据库.ipynb  附LangChain自定义Embedding封装讲解.ipynb
01_Case1 notebook/C6 构建 RAG 应用/: 6.1 基于 LangChain 调用 LLM.ipynb  6.2 构建检索问答链.ipynb  streamlit_app_ZhiPuAPI.py
01_Case1RAGviaLangChain/: langchain清单.txt  rerank.ipynb
01_Case1RAGviaLangChain/02调用LLM实现基础问答/: 2.2 使用 LLM API.ipynb
01_Case1RAGviaLangChain/03构建词向量WordEmbedding/: 3.2 使用 Embedding API.ipynb
01_Case1RAGviaLangChain/04数据清洗/: 4.1 数据预处理-分步骤.ipynb  4.1 数据预处理-汇总.py
01_Case1RAGviaLangChain/05搭建知识库/: 5.1 搭建向量数据库-Chroma-Rerank.ipynb  5.1 搭建向量数据库-Chroma-v2024.ipynb  5.1 搭建向量数据库-Chroma-v2025.ipynb  (+6 more)
01_RAG理论/: 00_RAG入门.md  01_RAG进阶.md  02_现有RAG框架总结.md  03_RAG-吴恩达-LangChain.ipynb
02_LLM-Langchain/: 各种模型调用API汇总.md
02_RAG-LangChain实战/: langchain清单.txt
02_RAG实战-LangChain/: 00_llm-rag一页纸速通.ipynb  langchain清单.txt
03_RAG-LangChain/: tmp.py
03_RAG实战-RAGFlow/: RAGFlow.md
LLM准备/: 各种模型调用API汇总.md
ML/: Titanic.ipynb  UnlabeledData.csv
Milvus/: 安装.ipynb
chroma-vmax/: chroma.sqlite3
(+227 files in other folders)
