[project]
name = "learn-llm-rag-easily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-community==0.3.27",
    "langchain-milvus==0.2.1",
    "pymupdf==1.26.4",
    "sentence-transformers==5.1.1",
    "xinference-client>=1.13.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
